--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.0.0.9000
 Author: Authors@R: c(
     person("Hossein", "Haghbin", email = "haghbinh@gmail.com", role = c("aut", "cre")),
     person("Morteza", "Najibi", email = "mor.najibi@gmail.com", role = "aut"))
-Maintainer: Hossein Haghbin <haghbinh@gmail.com>
+URL: https://github.com/haghbinh/Rfssa.git
 Description: Develope functional singular spectrum analyis
     tools and plots as described in Haghbin er.al(2018).
 License: GPL (>= 2)
