--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,6 +5,7 @@ Version: 0.0.0.9000
 Author: Authors@R: c(
     person("Hossein", "Haghbin", email = "haghbinh@gmail.com", role = c("aut", "cre")),
     person("Morteza", "Najibi", email = "mor.najibi@gmail.com", role = "aut"))
+Maintainer: Hossein Haghbin <haghbinh@gmail.com>
 URL: https://github.com/haghbinh/Rfssa.git
 Description: Develope functional singular spectrum analyis
     tools and plots as described in Haghbin er.al(2018).
@@ -13,9 +14,7 @@ Encoding: UTF-8
 LazyData: TRUE
 RoxygenNote: 6.1.0
 Imports: Rcpp,
-         fda
+         fda,
+         lattice
 LinkingTo: Rcpp,
            RcppArmadillo
-Depends: fda,
-         Rssa,
-         lattice
