--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,8 +7,8 @@ Author: Authors@R: c(
     person("Morteza", "Najibi", email = "mor.najibi@gmail.com", role = "aut"))
 Maintainer: Hossein Haghbin <haghbinh@gmail.com>
 URL: https://github.com/haghbinh/Rfssa.git
-Description: Develope functional singular spectrum analyis
-    tools and plots as described in Haghbin er.al(2018).
+Description: Develope functional singular spectrum analysis
+    tools and plots.
 License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: TRUE
