--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,7 @@ export(freconstruct)
 export(fssa)
 export(fwcor)
 importFrom(Rcpp,sourceCpp)
+importFrom(fda,eval.fd)
 importFrom(fda,fd)
 importFrom(fda,inprod)
+importFrom(fda,smooth.basis)
