--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,9 +15,10 @@ LazyData: TRUE
 RoxygenNote: 6.1.0
 Imports: Rcpp,
          fda,
-         lattice
+         lattice,
 LinkingTo: Rcpp,
            RcppArmadillo
 Suggests: knitr,
     rmarkdown
 VignetteBuilder: knitr
+Depends: R (>= 2.10)
