--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(plot,fssa)
 export(freconstruct)
 export(fssa)
 export(fwcor)
+export(wplot)
 importFrom(Rcpp,sourceCpp)
 importFrom(fda,eval.fd)
 importFrom(fda,fd)
