--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Functional Singular Spectrum Analyis
 Version: 0.0.0.9000
 Author: Authors@R: c(
     person("Hossein", "Haghbin", email = "haghbinh@gmail.com", role = c("aut", "cre")),
-    person("Morteza", "Najibi", email = "mor.najibi@gmail.com", role = "aut"))
+    person("Seyed Morteza", "Najibi", email = "mnajibi@shirazu.ac.ir", role = "aut"))
 Maintainer: Hossein Haghbin <haghbinh@gmail.com>
 URL: https://github.com/haghbinh/Rfssa.git
 Description: Develop functional singular spectrum analysis
