Defining plotly plots for FTS objects

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,8 @@ RoxygenNote: 6.1.1
 Imports: Rcpp,
          fda,
          lattice,
-         plot3D,
+         plotly,
+         dplyr,
 LinkingTo: Rcpp,
            RcppArmadillo,
 Suggests: knitr,
