--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ importFrom(Rcpp,sourceCpp)
 importFrom(fda,eval.fd)
 importFrom(fda,fd)
 importFrom(fda,inprod)
+importFrom(fda,is.fd)
 importFrom(fda,smooth.basis)
 useDynLib(Rfssa)
 useDynLib(Rfssa, .registration = TRUE)
