Adjusting some plots of the class fts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,5 +13,10 @@ importFrom(fda,fd)
 importFrom(fda,inprod)
 importFrom(fda,is.fd)
 importFrom(fda,smooth.basis)
+importFrom(plotly,add_lines)
+importFrom(plotly,add_surface)
+importFrom(plotly,layout)
+importFrom(plotly,plot_ly)
+importFrom(plotly,subplot)
 useDynLib(Rfssa)
 useDynLib(Rfssa, .registration = TRUE)
