--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,8 +17,7 @@ Imports: Rcpp,
          fda,
          lattice,
          plotly,
-         dplyr,
 LinkingTo: Rcpp,
            RcppArmadillo,
 Suggests: knitr,
-Depends: R (>= 2.10)
+Depends: R (>= 2.10), dplyr
