all plots were corrected

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,8 @@ S3method(plot,fts)
 export(freconstruct)
 export(fssa)
 export(fts)
-export(fwcor)
+export(mfwcor)
+export(ufwcor)
 export(wplot)
 importFrom(Rcpp,sourceCpp)
 importFrom(fda,eval.fd)
