--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,7 @@ Imports: Rcpp,
          fda,
          lattice,
          plotly,
+         shiny,
 LinkingTo: Rcpp,
            RcppArmadillo,
 Suggests: knitr,
