Fixed the fssa.plot issue found by Jordan and updating the shiny part.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,12 +13,14 @@ export(launchApp)
 export(mfwcor)
 export(ufwcor)
 export(wplot)
+import(Rssa)
 import(shiny)
 importFrom(Rcpp,sourceCpp)
 importFrom(fda,eval.fd)
 importFrom(fda,fd)
 importFrom(fda,inprod)
 importFrom(fda,is.fd)
+importFrom(fda,pca.fd)
 importFrom(fda,smooth.basis)
 importFrom(plotly,add_lines)
 importFrom(plotly,add_surface)
