Added correlation between FTS objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method("-",fts)
 S3method("[",fts)
 S3method(plot,fssa)
 S3method(plot,fts)
+export(cor.fts)
 export(freconstruct)
 export(fssa)
 export(fts)
