Fix MFSSA example data load

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(wplot)
 import(Rssa)
 import(shiny)
 importFrom(Rcpp,sourceCpp)
+importFrom(fda,create.bspline.basis)
 importFrom(fda,eval.fd)
 importFrom(fda,fd)
 importFrom(fda,inprod)
