--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,8 @@ Imports: Rcpp,
          lattice,
          plotly,
          shiny,
+         Rssa,
+         markdown,
 LinkingTo: Rcpp,
            RcppArmadillo,
 Suggests: knitr,
