Fixing 2 notes and a warning

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(mfwcor)
 export(ufwcor)
 export(wplot)
 import(Rssa)
+import(dplyr)
 import(shiny)
 importFrom(Rcpp,sourceCpp)
 importFrom(fda,create.bspline.basis)
@@ -24,6 +25,12 @@ importFrom(fda,inprod)
 importFrom(fda,is.fd)
 importFrom(fda,pca.fd)
 importFrom(fda,smooth.basis)
+importFrom(graphics,abline)
+importFrom(graphics,axis)
+importFrom(graphics,par)
+importFrom(graphics,plot)
+importFrom(graphics,points)
+importFrom(graphics,polygon)
 importFrom(plotly,add_lines)
 importFrom(plotly,add_surface)
 importFrom(plotly,layout)
@@ -31,5 +38,12 @@ importFrom(plotly,plot_ly)
 importFrom(plotly,plotlyOutput)
 importFrom(plotly,renderPlotly)
 importFrom(plotly,subplot)
+importFrom(stats,fft)
+importFrom(stats,integrate)
+importFrom(stats,rnorm)
+importFrom(stats,sd)
+importFrom(stats,ts.plot)
+importFrom(utils,head)
+importFrom(utils,read.table)
 useDynLib(Rfssa)
 useDynLib(Rfssa, .registration = TRUE)
