Resolving NOTES and WARNINGS

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,9 +10,8 @@ export(cor.fts)
 export(freconstruct)
 export(fssa)
 export(fts)
+export(fwcor)
 export(launchApp)
-export(mfwcor)
-export(ufwcor)
 export(wplot)
 import(Rssa)
 import(dplyr)
