Resolving The last two NOTES and shiny's database

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ importFrom(plotly,plot_ly)
 importFrom(plotly,plotlyOutput)
 importFrom(plotly,renderPlotly)
 importFrom(plotly,subplot)
+importFrom(stats,density)
 importFrom(stats,fft)
 importFrom(stats,integrate)
 importFrom(stats,rnorm)
