--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ importFrom(graphics,points)
 importFrom(graphics,polygon)
 importFrom(plotly,add_lines)
 importFrom(plotly,add_surface)
+importFrom(plotly,hide_colorbar)
 importFrom(plotly,layout)
 importFrom(plotly,plot_ly)
 importFrom(plotly,plotlyOutput)
