--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Description: Methods and tools for implementing functional singular spectrum ana
     as described in Haghbin H., Najibi, S.M., Mahmoudvand R., Trinka J., Maadooliat M. (2019). Functional singular spectrum Analysis. Manuscript submitted for publication. 
 License: GPL (>= 2)
 Encoding: UTF-8
-LazyData: TRUE
+LazyData: true
 RoxygenNote: 6.1.1
 Imports: Rcpp,
          fda,
