--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,31 +7,51 @@ S3method("[",fts)
 S3method(plot,fssa)
 S3method(plot,fts)
 export(cor.fts)
+export(fforecast)
 export(freconstruct)
 export(fssa)
 export(fts)
 export(fwcor)
 export(launchApp)
+export(load_github_data)
 export(wplot)
 import(Rssa)
 import(dplyr)
 import(shiny)
+importFrom(RSpectra,eigs)
 importFrom(Rcpp,sourceCpp)
 importFrom(fda,create.bspline.basis)
+importFrom(fda,create.fourier.basis)
+importFrom(fda,eval.basis)
 importFrom(fda,eval.fd)
 importFrom(fda,fd)
 importFrom(fda,inprod)
 importFrom(fda,is.fd)
 importFrom(fda,pca.fd)
 importFrom(fda,smooth.basis)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,geom_tile)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,ggtitle)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_fill_distiller)
+importFrom(ggplot2,xlab)
+importFrom(ggplot2,ylab)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
 importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(graphics,polygon)
+importFrom(hrbrthemes,theme_ipsum)
+importFrom(httr,GET)
+importFrom(httr,content)
+importFrom(httr,stop_for_status)
+importFrom(methods,is)
+importFrom(methods,new)
 importFrom(plotly,add_lines)
 importFrom(plotly,add_surface)
+importFrom(plotly,ggplotly)
 importFrom(plotly,hide_colorbar)
 importFrom(plotly,layout)
 importFrom(plotly,plot_ly)
@@ -44,6 +64,7 @@ importFrom(stats,integrate)
 importFrom(stats,rnorm)
 importFrom(stats,sd)
 importFrom(stats,ts.plot)
+importFrom(tibble,as_tibble)
 importFrom(utils,head)
 importFrom(utils,read.table)
 useDynLib(Rfssa)
