Update shiny and data load function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ importFrom(hrbrthemes,theme_ipsum)
 importFrom(httr,GET)
 importFrom(httr,content)
 importFrom(httr,stop_for_status)
+importFrom(httr,timeout)
 importFrom(methods,is)
 importFrom(methods,new)
 importFrom(plotly,add_lines)
