--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,27 +1,26 @@
 Package: Rfssa
 Type: Package
 Title: Functional Singular Spectrum Analysis
-Version: 2.0.1
+Version: 2.1.0
 Authors@R: c(
-    person("Hossein", "Haghbin", email = "haghbinh@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0001-8416-2354")),
+    person("Hossein", "Haghbin", email = "haghbin@pgu.ac.ir", role = c("aut", "cre"), comment = c(ORCID = "0000-0001-8416-2354")),
     person("Jordan", "Trinka", email = "jordantrinka4@hotmail.com", role = "aut"),
     person("Seyed Morteza", "Najibi", email = "mor.najibi@gmail.com", role = "aut"),
     person("Mehdi", "Maadooliat", email = "mehdi.maadooliat@mu.edu", role = "aut", comment = c(ORCID = "0000-0002-5408-2676"))
     )
-Maintainer: Hossein Haghbin <haghbinh@gmail.com>
+Maintainer: Hossein Haghbin <haghbin@pgu.ai.ir>
 URL: https://github.com/haghbinh/Rfssa
-Description: Methods and tools for implementing univariate and multivariate functional singular spectrum analysis for functional time series whose variables might be observed over different dimensional domains. The univariate fssa algorithm is described in Haghbin H., Najibi, S.M., Mahmoudvand R., Trinka J., Maadooliat M. (2021) and the multivariate fssa over different dimensional domains technique may be found in Trinka J., Haghbin H., and Maadooliat M. (Accepted). In addition, one may perform forecasting of univariate and multivariate fts whose variables are observed over one-dimensional domains as described in the dissertation of Trinka J. (2021) and the manuscript of Trinka J., Haghbin H., Maadooliat M. (2020) where the manuscript is to be submitted to a journal for publication. 
+Description: Methods and tools for implementing functional singular spectrum analysis and related techniques.
 License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.0
 Imports: Rcpp,
          fda,
          lattice,
          plotly,
          shiny,
          Rssa,
-         hrbrthemes,
          ggplot2,
          tibble,
          methods,
@@ -31,5 +30,8 @@ Imports: Rcpp,
 LinkingTo: Rcpp,
            RcppArmadillo,
            RcppEigen,
-Suggests: knitr,
+Suggests: 
+    testthat (>= 3.0.0),
+    knitr
 Depends: R (>= 4.0.0), dplyr
+Config/testthat/edition: 3
