--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(plot,fts)
 export(cor.fts)
 export(eval.fts)
 export(fforecast)
+export(fpredinterval)
 export(freconstruct)
 export(fssa)
 export(fts)
@@ -30,6 +31,7 @@ importFrom(fda,inprod)
 importFrom(fda,is.fd)
 importFrom(fda,pca.fd)
 importFrom(fda,smooth.basis)
+importFrom(ftsa,quantile.fts)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_line)
@@ -67,6 +69,7 @@ importFrom(plotly,plot_ly)
 importFrom(plotly,plotlyOutput)
 importFrom(plotly,renderPlotly)
 importFrom(plotly,subplot)
+importFrom(rainbow,fts)
 importFrom(stats,density)
 importFrom(stats,fft)
 importFrom(stats,integrate)
