define a new S3 FTS class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,10 +12,10 @@ export(fforecast)
 export(fpredinterval)
 export(freconstruct)
 export(fssa)
-export(fts)
 export(fwcor)
 export(launchApp)
 export(load_github_data)
+export(mfts)
 export(wplot)
 import(Rssa)
 import(dplyr)
