--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,13 +6,13 @@ S3method("-",fts)
 S3method("[",fts)
 S3method(plot,fssa)
 S3method(plot,fts)
+export(FTS)
 export(cor.fts)
 export(eval.fts)
 export(fforecast)
 export(fpredinterval)
 export(freconstruct)
 export(fssa)
-export(fts)
 export(fwcor)
 export(launchApp)
 export(load_github_data)
