adding loadMontanaData function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,10 +12,11 @@ export(fforecast)
 export(fpredinterval)
 export(freconstruct)
 export(fssa)
+export(funts)
 export(fwcor)
 export(launchApp)
-export(load_github_data)
-export(mfts)
+export(loadJambiData)
+export(loadMontanaData)
 export(wplot)
 import(Rssa)
 import(dplyr)
@@ -54,10 +55,6 @@ importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(graphics,polygon)
-importFrom(httr,GET)
-importFrom(httr,content)
-importFrom(httr,stop_for_status)
-importFrom(httr,timeout)
 importFrom(methods,is)
 importFrom(methods,new)
 importFrom(plotly,add_lines)
