--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(freconstruct)
 export(fssa)
 export(funts)
 export(fwcor)
+export(is.funts)
 export(launchApp)
 export(loadJambiData)
 export(loadMontanaData)
