--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method(plot,fts)
 S3method(print,funts)
 export(cor.fts)
 export(eval.fts)
+export(eval.funts)
 export(fforecast)
 export(fpredinterval)
 export(freconstruct)
