--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(funts)
 export(fwcor)
 export(is.funts)
 export(launchApp)
+export(loadCallcenterData)
 export(loadJambiData)
 export(loadMontanaData)
 export(wplot)
