--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,6 @@ S3method(plot,fssa)
 S3method(plot,fts)
 S3method(print,funts)
 export(cor.fts)
-export(eval.fts)
 export(eval.funts)
 export(fforecast)
 export(fpredinterval)
@@ -28,12 +27,11 @@ import(dplyr)
 import(shiny)
 importFrom(RSpectra,eigs)
 importFrom(Rcpp,sourceCpp)
-importFrom(fda,create.bspline.basis)
-importFrom(fda,create.fourier.basis)
 importFrom(fda,eval.basis)
 importFrom(fda,eval.fd)
 importFrom(fda,fd)
 importFrom(fda,inprod)
+importFrom(fda,is.basis)
 importFrom(fda,is.fd)
 importFrom(fda,pca.fd)
 importFrom(fda,smooth.basis)
