--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ S3method("-",funts)
 S3method("[",funts)
 S3method(length,funts)
 S3method(plot,fssa)
-S3method(plot,fts)
+S3method(plot,funts)
 S3method(print,funts)
 export(cor.fts)
 export(eval.funts)
