adding plotly_funts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(launchApp)
 export(loadCallcenterData)
 export(loadJambiData)
 export(loadMontanaData)
+export(plotly_funts)
 export(wplot)
 import(Rssa)
 import(dplyr)
@@ -54,6 +55,7 @@ importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
+importFrom(graphics,image)
 importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,points)
