adding plotly_funts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,6 @@ S3method("-",funts)
 S3method("[",funts)
 S3method(length,funts)
 S3method(plot,fssa)
-S3method(plot,funts)
 S3method(print,funts)
 export(cor.fts)
 export(eval.funts)
@@ -21,6 +20,7 @@ export(launchApp)
 export(loadCallcenterData)
 export(loadJambiData)
 export(loadMontanaData)
+export(plotly_funts)
 export(wplot)
 import(Rssa)
 import(dplyr)
