--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: Rfssa
 Type: Package
 Title: Functional Singular Spectrum Analysis
-Version: 2.1.1
+Version: 3.0.0
 Authors@R: c(
     person("Hossein", "Haghbin", email = "haghbin@pgu.ac.ir", role = c("aut", "cre"), comment = c(ORCID = "0000-0001-8416-2354")),
     person("Jordan", "Trinka", email = "jordantrinka4@hotmail.com", role = "aut"),
@@ -11,9 +11,10 @@ Authors@R: c(
 Maintainer: Hossein Haghbin <haghbin@pgu.ac.ir>
 URL: https://github.com/haghbinh/Rfssa
 Description: Methods and tools for implementing functional singular spectrum analysis and related techniques.
-License: GPL (>= 2)
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
+LazyLoad: true
 RoxygenNote: 7.2.3
 Imports: Rcpp,
          fda,
@@ -32,7 +33,6 @@ LinkingTo: Rcpp,
            RcppArmadillo,
            RcppEigen,
 Suggests: 
-    testthat (>= 3.0.0),
     knitr
-Depends: R (>= 4.0.0), dplyr
-Config/testthat/edition: 3
+Depends: R (>= 4.0.0)
+Repository: CRAN
