--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(length,funts)
 S3method(plot,fssa)
 S3method(plot,funts)
 S3method(print,funts)
+export(as.funts)
 export(cor.fts)
 export(eval.funts)
 export(fforecast)
@@ -27,6 +28,8 @@ import(Rssa)
 import(shiny)
 importFrom(RSpectra,eigs)
 importFrom(Rcpp,sourceCpp)
+importFrom(dplyr,"%>%")
+importFrom(dplyr,group_by)
 importFrom(fda,eval.basis)
 importFrom(fda,eval.fd)
 importFrom(fda,fd)
@@ -71,6 +74,7 @@ importFrom(plotly,plotlyOutput)
 importFrom(plotly,renderPlotly)
 importFrom(plotly,subplot)
 importFrom(rainbow,fts)
+importFrom(rainbow,is.fts)
 importFrom(stats,density)
 importFrom(stats,fft)
 importFrom(stats,integrate)
