--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(length,funts)
 S3method(plot,fssa)
 S3method(plot,funts)
 S3method(print,funts)
+export(as.funts)
 export(cor.fts)
 export(eval.funts)
 export(fforecast)
@@ -27,6 +28,9 @@ import(Rssa)
 import(shiny)
 importFrom(RSpectra,eigs)
 importFrom(Rcpp,sourceCpp)
+importFrom(dplyr,"%>%")
+importFrom(dplyr,group_by)
+importFrom(fda,create.bspline.basis)
 importFrom(fda,eval.basis)
 importFrom(fda,eval.fd)
 importFrom(fda,fd)
@@ -35,6 +39,7 @@ importFrom(fda,is.basis)
 importFrom(fda,is.fd)
 importFrom(fda,pca.fd)
 importFrom(fda,smooth.basis)
+importFrom(ftsa,is.fts)
 importFrom(ftsa,quantile.fts)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,element_blank)
