--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method("+",funts)
 S3method("-",funts)
 S3method("[",funts)
 S3method(length,funts)
+S3method(plot,fforecast)
 S3method(plot,fssa)
 S3method(plot,funts)
 S3method(print,funts)
