--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ importFrom(ggplot2,ylab)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
 importFrom(graphics,image)
+importFrom(graphics,matplot)
 importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,points)
@@ -76,6 +77,7 @@ importFrom(plotly,plotlyOutput)
 importFrom(plotly,renderPlotly)
 importFrom(plotly,subplot)
 importFrom(rainbow,fts)
+importFrom(stats,approxfun)
 importFrom(stats,density)
 importFrom(stats,fft)
 importFrom(stats,integrate)
@@ -83,7 +85,10 @@ importFrom(stats,rnorm)
 importFrom(stats,sd)
 importFrom(stats,ts.plot)
 importFrom(tibble,as_tibble)
+importFrom(utils,download.file)
 importFrom(utils,head)
 importFrom(utils,read.table)
+importFrom(utils,str)
+importFrom(utils,tail)
 useDynLib(Rfssa)
 useDynLib(Rfssa, .registration = TRUE)
