--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,10 +25,11 @@ export(loadJambiData)
 export(loadMontanaData)
 export(plotly_funts)
 export(wplot)
-import(Rssa)
 import(shiny)
 importFrom(RSpectra,eigs)
 importFrom(Rcpp,sourceCpp)
+importFrom(Rssa,reconstruct)
+importFrom(Rssa,ssa)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,group_by)
 importFrom(fda,create.bspline.basis)
@@ -65,6 +66,7 @@ importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(graphics,polygon)
+importFrom(markdown,mark)
 importFrom(methods,is)
 importFrom(methods,new)
 importFrom(plotly,add_lines)
