--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,9 +66,9 @@ importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(graphics,polygon)
+importFrom(lattice,levelplot)
+importFrom(lattice,xyplot)
 importFrom(markdown,mark)
-importFrom(methods,is)
-importFrom(methods,new)
 importFrom(plotly,add_lines)
 importFrom(plotly,add_surface)
 importFrom(plotly,ggplotly)
