--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,21 +10,19 @@ S3method(plot,fssa)
 S3method(plot,funts)
 S3method(print,funts)
 export(as.funts)
-export(cor.fts)
+export(cor.funts)
 export(eval.funts)
 export(fforecast)
 export(fpredinterval)
 export(freconstruct)
 export(fssa)
 export(funts)
-export(fwcor)
 export(is.funts)
 export(launchApp)
 export(loadCallcenterData)
 export(loadJambiData)
 export(loadMontanaData)
 export(plotly_funts)
-export(wplot)
 import(shiny)
 importFrom(RSpectra,eigs)
 importFrom(Rcpp,sourceCpp)
