The temperature dataset is added.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(launchApp)
 export(loadCallcenterData)
 export(loadJambiData)
 export(loadMontanaData)
+export(loadTempData)
 export(plotly_funts)
 import(shiny)
 importFrom(RSpectra,eigs)
