--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,3 +91,4 @@ importFrom(utils,read.table)
 importFrom(utils,str)
 importFrom(utils,tail)
 useDynLib(Rfssa)
+useDynLib(Rfssa, .registration = TRUE)
