--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(length,funts)
 S3method(plot,fforecast)
 S3method(plot,fssa)
 S3method(plot,funts)
+S3method(print,fforecast)
 S3method(print,funts)
 export(as.funts)
 export(eval.funts)
